[gd_scene load_steps=8 format=2]

[ext_resource path="res://creatures/creatures.tscn" type="PackedScene" id=1]
[ext_resource path="res://creatures/player/player.gd" type="Script" id=2]
[ext_resource path="res://art/temp/Player.png" type="Texture" id=3]
[ext_resource path="res://weapons/ranged/RangedWeapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapons/melee/MeleeWeapon.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 25 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="creature_status" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RangedWeapon" parent="." instance=ExtResource( 4 )]

[node name="MeleeWeapon" parent="." instance=ExtResource( 5 )]

[node name="ChangeWeaponTimer" type="Timer" parent="."]
one_shot = true

[connection signal="bullet_consume" from="RangedWeapon" to="." method="_on_RangedWeapon_bullet_consume"]
